--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<string>NSLocationWhenInUseUsageDescription</string>
+	<key>Display Location and Track it.</key>	
+	<string>NSLocationAlwaysAndWhenInUseUsageDescription</string>
+	<key>Display Location and Track it.</key>
 </dict>
 </plist>
