--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,10 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
-  cloud_firestore: ^5.4.4
-  firebase_core: ^3.6.0
   flutter:
     sdk: flutter
-  geolocator: ^13.0.1
   google_maps_flutter: ^2.9.0
+  location: ^7.0.0
   permission_handler: ^11.3.1
 
 dev_dependencies:
