--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_maps_poc
-description: "A new Flutter project."
+description: "Flutter Maps POC."
 publish_to: 'none'
 version: 0.1.0
 
