iOS Compile Fix, But Map Still not loading

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,9 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<string>Display Location and Track it.</string>	
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>NSLocationAlwaysAndWhenInUseUsageDescription</string>
-	<key>Display Location and Track it.</key>
+	<string>Display Location and Track it.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Display Location and Track it.</string>
 </dict>
 </plist>
